--- a/CSS/style9.css
+++ b/CSS/style9.css
@@ -5,7 +5,16 @@ P{
 .desbordamiento{
     width: 300px;
     height: 300px;
-    background-color: tan
+    background-color: tan;
 
+    /* Sirve para ocultar (hidden) o dejar
+    visible cuando el contenido
+    se desborda, puedo ponerle un scroll */
+    overflow: auto;
 
+}
+
+.despliegue{
+    column-count: 3;
+    column-rule: 5px solid blue;
 }
